# mako

./: CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md  THIRDPARTY.toml  cliff.toml  release-plz.toml
.cargo/: config.toml
.github/workflows/: backfill-binaries.yml  check.yml  publish.yml
scripts/: install-hooks.sh
scripts/hooks/: pre-commit
src/: main.rs
tests/: cli.rs
